[gd_scene load_steps=9 format=2]

[ext_resource path="res://font/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://imagens do jogo/IMG_0106 (1).PNG" type="Texture" id=2]
[ext_resource path="res://Scenes/wallpaperbetter.com_1024x600.jpg" type="Texture" id=3]
[ext_resource path="res://MUSIC/toby fox - UNDERTALE Soundtrack - 11 Determination.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/startScreen.gd" type="Script" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 2
font_data = ExtResource( 1 )

[node name="startScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.0
margin_top = -237.0
margin_right = 401.0
margin_bottom = 243.0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 399, 179 )
scale = Vector2( 1.00488, 1.00167 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 449, 235 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="startBtn" type="Button" parent="."]
margin_left = 392.0
margin_top = 273.0
margin_right = 609.0
margin_bottom = 309.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="Mapas" type="Button" parent="."]
margin_left = 394.0
margin_top = 337.0
margin_right = 611.0
margin_bottom = 373.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Mapas"

[node name="quitBtn" type="Button" parent="."]
margin_left = 393.0
margin_top = 396.0
margin_right = 610.0
margin_bottom = 432.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="langBtn" type="Button" parent="."]
margin_left = 692.0
margin_top = 393.0
margin_right = 790.0
margin_bottom = 429.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="home_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 1.15

[connection signal="pressed" from="startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="Mapas" to="." method="_on_Mapas_pressed"]
[connection signal="pressed" from="quitBtn" to="." method="_on_quitBtn_pressed"]
[connection signal="pressed" from="langBtn" to="." method="_on_langBtn_pressed"]
